# $Id: Makefile.am,v 1.1 2003-12-31 00:10:40 psy Exp $
#
# Copyright (C) 2003 Tristan Miller <psychonaut@nothingisreal.com>
#  
# This file is free software; the author gives unlimited permission to
# copy and/or distribute it, with or without modifications.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even
# the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
# PURPOSE.

AUTOMAKE_OPTIONS = dist-bzip2
SUBDIRS = src
man_MANS = doc/gpp.1
EXTRA_DIST = doc/gpp.html doc/gpp.pp $(man_MANS)
